# project-2_elizarov_M25-555

./: README.md  pyproject.toml  run_tests.sh
data/: final.json  products.json  users.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
tests/: conftest.py  test_core.py  test_parser.py  test_utils.py
