[tool.poetry]
name = "project2_elizarov_M25-555"
version = "0.1.0"
description = "Primitive database implementation for Python course"
authors = ["Elizarov M25-555 <kirillelisarow@ya.ru>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "3.8.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^8.4.2"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
